--- a/index.html
+++ b/index.html
@@ -4,152 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Tu Sitio Web</title>
+  <script src="script.js" defer></script> 
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
 
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: #333;
-      color: white;
-      padding: 15px 30px;
-    }
+  <title>Delivery v3</title>
 
-    .logo img {
-      width: 80px;
-    }
-
-    .menu {
-      display: flex;
-      gap: 20px;
-      flex: 1;
-      justify-content: center;
-    }
-
-    .menu a {
-      text-decoration: none;
-      color: white;
-      transition: color 0.3s ease;
-    }
-
-    .menu a:hover {
-      color: #ffcc00;
-    }
-
-    .cart-order-toggle {
-      display: flex;
-      gap: 10px;
-    }
-
-    .cart img {
-      width: 30px;
-      height: 30px;
-      cursor: pointer;
-    }
-
-    .mobile-menu-toggle {
-      font-size: 24px;
-      cursor: pointer;
-      display: none;
-    }
-
-    .mobile-menu-container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5); /* Fondo oscuro */
-      display: none;
-      z-index: 2; /* Coloca encima del menú */
-    }
-
-    .mobile-menu {
-      display: flex;
-      flex-direction: column;
-      background-color: #333;
-      color: white;
-      position: fixed;
-      top: 0;
-      left: -80%;
-      width: 80%;
-      height: 100%;
-      transition: left 0.3s ease;
-      z-index: 3; /* Coloca encima del fondo oscuro */
-    }
-
-    .mobile-menu a {
-      padding: 15px;
-      text-align: center;
-      text-decoration: none;
-      color: white;
-      transition: background-color 0.3s ease;
-    }
-
-    .mobile-menu a:hover {
-      background-color: #555;
-    }
-
-    .mobile-menu.show {
-      left: 0;
-    }
-
-    .order-now {
-      order: 3;
-    }
-
-    .order-now button {
-      background-color: #ffcc00;
-      color: #333;
-      border: none;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .order-now button:hover {
-      background-color: #ffdb4d;
-    }
-
-    @media only screen and (max-width: 768px) {
-      .menu {
-        display: none;
-      }
-
-      .mobile-menu-toggle {
-        display: flex;
-      }
-
-      .cart-order-toggle {
-        order: 2;
-      }
-
-      .order-now {
-        display: none;
-      }
-
-      .navbar {
-        justify-content: space-between;
-        padding: 10px;
-      }
-
-      .mobile-menu-container {
-        display: none; /* Oculta inicialmente */
-      }
-
-      .mobile-menu.show {
-        left: 0;
-        width: 60%;
-      }
-    }
-  </style>
 </head>
 <body>
 
@@ -158,10 +17,10 @@
     <img src="/assets/delivery-service-in-kankakee-logo.png" alt="Tu Logo">
   </div>
   <div class="menu">
-    <a href="#">Inicio</a>
-    <a href="#">Productos</a>
-    <a href="#">Servicios</a>
-    <a href="#">Contacto</a>
+    <a href="#">Home</a>
+    <a href="#">My Account</a>
+    <a href="#">About Us</a>
+    <a href="#"></a>
     <a href="#">Ayuda</a>
   </div>
   <div class="cart-order-toggle">
@@ -179,29 +38,163 @@
 
 <div class="mobile-menu">
   <a href="#">Inicio</a>
-  <a href="#">Productos</a>
+  <a href="#">Login</a>
   <a href="#">Servicios</a>
-  <a href="#">Contacto</a>
+  <a href="#">Contact</a>
   <a href="#">Ayuda</a>
 </div>
 
-<!-- Tu contenido va aquí -->
 
-<script>
-  function toggleMobileMenu() {
-    var mobileMenu = document.querySelector('.mobile-menu');
-    var mobileMenuContainer = document.querySelector('.mobile-menu-container');
-    mobileMenu.classList.toggle('show');
-    mobileMenuContainer.style.display = mobileMenu.classList.contains('show') ? 'block' : 'none';
-  }
 
-  function closeMobileMenu() {
-    var mobileMenu = document.querySelector('.mobile-menu');
-    var mobileMenuContainer = document.querySelector('.mobile-menu-container');
-    mobileMenu.classList.remove('show');
-    mobileMenuContainer.style.display = 'none';
-  }
-</script>
+<div class="top-bar">
+    <img src="/assets/seasonal-logo.png" alt="Center Logo" class="center-logo">
+</div>
 
-</body>
-</html>
+<div class="welcome-section">
+    <h1>Welcome to Local Bites Delivery</h1>
+    <p>Every order you place with us makes a meaningful contribution to supporting the Center of Hope Food Pantry in Kankakee</p>
+    <div class="search-container">
+        <input type="text" id="search" placeholder="Search for menus...">
+        <button class="search-button">Search</button>
+    </div>
+    <a href="#" class="cta-button">Ver Menús</a>
+    <button class="view-all-button">Ver todos los restaurantes disponibles del sitio</button>
+</div>
+
+<div class="cities-grid">
+    <div class="city">
+        <h2>Mateno</h2>
+        <p>Discover the local flavors of Mateno with our diverse menu options.</p>
+    </div>
+    <div class="city">
+        <h2>Kankakee</h2>
+        <p>Support the Center of Hope Food Pantry in Kankakee with every order you place.</p>
+    </div>
+</div>
+
+<style>
+    .top-bar {
+
+        height: 110px;
+        position: relative;
+        text-align: center;
+    }
+
+    .top-bar img {
+        width: 80px; /* Ajusta el ancho del logo según sea necesario */
+        height: auto;
+        margin-top: 12px; /* Ajusta el margen superior del logo según sea necesario */
+    }
+
+    .top-bar::before,
+    .top-bar::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 2px;
+        background-color: #FFFF00;
+    }
+
+    .top-bar::before {
+        left: 0;
+    }
+
+    .top-bar::after {
+        right: 0;
+    }
+
+    .welcome-section {
+   
+
+        text-align: center;
+        opacity: 0;
+        transform: translateY(20px);
+        animation: fadeInUp 1s ease-out 0.5s forwards;
+        margin-bottom: 20px; /* Añade margen para crear espacio entre secciones */
+    }
+
+    .cities-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        margin: 0 auto;
+        max-width: 800px; /* Ajusta el ancho máximo según sea necesario */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 5px;
+        overflow: hidden; /* Oculta la sombra en los elementos de la cuadrícula */
+    }
+
+    .city {
+        text-align: left;
+        padding: 20px;
+        background-color: #f9f9f9;
+        border-radius: 5px;
+    }
+
+    .search-container {
+        margin-top: 20px;
+        text-align: center; /* Centra la barra de búsqueda */
+    }
+
+    #search {
+        padding: 15px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        margin-right: 10px;
+        width: 70%; /* Ajusta la longitud del campo de entrada */
+        transition: border-color 0.3s ease;
+    }
+
+    #search:focus {
+        border-color: #4caf50;
+    }
+
+    .search-button {
+        padding: 15px 20px;
+        background-color: #4caf50;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    .search-button:hover {
+        background-color: #45a049;
+    }
+
+    .cta-button,
+    .view-all-button {
+        display: inline-block;
+        padding: 15px 20px;
+        background-color: #4caf50;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+        margin-top: 20px;
+    }
+
+    .cta-button:hover,
+    .view-all-button:hover {
+        background-color: #45a049;
+    }
+
+    @keyframes fadeInUp {
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    h1 {
+        color: #333;
+        margin-bottom: 20px;
+    }
+
+    p {
+        color: #666;
+        margin-bottom: 40px;
+    }
+</style>
