--- a/index.html
+++ b/index.html
@@ -46,44 +46,23 @@
 
 
 
-<div class="top-bar">
-    <img src="/assets/seasonal-logo.png" alt="Center Logo" class="center-logo">
-</div>
 
-<div class="welcome-section">
-    <h1>Welcome to Local Bites Delivery</h1>
-    <p>Every order you place with us makes a meaningful contribution to supporting the Center of Hope Food Pantry in Kankakee</p>
-    <div class="search-container">
-        <input type="text" id="search" placeholder="Search for menus...">
-        <button class="search-button">Search</button>
-    </div>
-    <a href="#" class="cta-button">Ver Menús</a>
-    <button class="view-all-button">Ver todos los restaurantes disponibles del sitio</button>
-</div>
-
-<div class="cities-grid">
-    <div class="city">
-        <h2>Mateno</h2>
-        <p>Discover the local flavors of Mateno with our diverse menu options.</p>
-    </div>
-    <div class="city">
-        <h2>Kankakee</h2>
-        <p>Support the Center of Hope Food Pantry in Kankakee with every order you place.</p>
-    </div>
-</div>
 
 <style>
-    .top-bar {
 
+    .top-bar {
         height: 110px;
         position: relative;
         text-align: center;
+        background-color: #333;
+        color: #fff;
+        padding: 10px;
     }
 
     .top-bar img {
-        width: 80px; /* Ajusta el ancho del logo según sea necesario */
+        width: 80px;
         height: auto;
-        margin-top: 12px; /* Ajusta el margen superior del logo según sea necesario */
+        margin-top: 12px;
     }
 
     .top-bar::before,
@@ -105,36 +84,22 @@
     }
 
     .welcome-section {
-   
-
         text-align: center;
         opacity: 0;
         transform: translateY(20px);
         animation: fadeInUp 1s ease-out 0.5s forwards;
-        margin-bottom: 20px; /* Añade margen para crear espacio entre secciones */
-    }
-
-    .cities-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-        margin: 0 auto;
-        max-width: 800px; /* Ajusta el ancho máximo según sea necesario */
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 5px;
-        overflow: hidden; /* Oculta la sombra en los elementos de la cuadrícula */
-    }
-
-    .city {
-        text-align: left;
+        margin-bottom: 20px;
+        background-color: #fff;
         padding: 20px;
-        background-color: #f9f9f9;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         border-radius: 5px;
     }
 
     .search-container {
         margin-top: 20px;
-        text-align: center; /* Centra la barra de búsqueda */
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     #search {
@@ -142,7 +107,7 @@
         border: 1px solid #ccc;
         border-radius: 5px;
         margin-right: 10px;
-        width: 70%; /* Ajusta la longitud del campo de entrada */
+        width: 70%;
         transition: border-color 0.3s ease;
     }
 
@@ -164,7 +129,6 @@
         background-color: #45a049;
     }
 
-    .cta-button,
     .view-all-button {
         display: inline-block;
         padding: 15px 20px;
@@ -176,9 +140,39 @@
         margin-top: 20px;
     }
 
-    .cta-button:hover,
     .view-all-button:hover {
         background-color: #45a049;
+    }
+
+    .cities-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        margin: 0 auto;
+        max-width: 800px;
+        border-radius: 5px;
+        overflow: hidden;
+    }
+
+    .city {
+        text-align: left;
+        padding: 20px;
+        background-size: cover;
+        background-position: center;
+        border-radius: 5px;
+        color: #fff;
+        text-decoration: none;
+        transition: transform 0.3s ease;
+        overflow: hidden;
+    }
+
+    .city:hover {
+        transform: scale(1.05);
+    }
+
+    .city h2,
+    .city p {
+        margin: 0;
     }
 
     @keyframes fadeInUp {
@@ -195,6 +189,62 @@
 
     p {
         color: #666;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
+    }
+
+    /* Media Query para dispositivos con un ancho de pantalla de 600 píxeles o menos */
+    @media (max-width: 600px) {
+        .cities-grid {
+            grid-template-columns: 1fr;
+        }
     }
 </style>
+</head>
+
+<body>
+<div class="top-bar">
+    <img src="/assets/seasonal-logo.png" alt="Center Logo" class="center-logo">
+</div>
+
+<div class="welcome-section">
+    <h1>Welcome to Local Bites Delivery</h1>
+    <p>Every order you place with us makes a meaningful contribution to supporting the Center of Hope Food Pantry in Kankakee</p>
+    <div class="search-container">
+        <input type="text" id="search" placeholder="Search for menus...">
+        <button class="search-button">Search</button>
+    </div>
+    <button class="view-all-button">Ver todos los restaurantes disponibles del sitio</button>
+</div>
+
+<div class="cities-grid">
+    <a href="#" class="city" style="background-image: url('/assets/mateno-bg.jpg');">
+        <h2>Mateno</h2>
+        <p>Discover the local flavors of Mateno with our diverse menu options.</p>
+    </a>
+    <a href="#" class="city" style="background-image: url('/assets/kankakee-bg.jpg');">
+        <h2>Kankakee</h2>
+        <p>Support the Center of Hope Food Pantry in Kankakee with every order you place.</p>
+    </a>
+</div>
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
