final landing page v2

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <input type="text" id="search" placeholder="Search for menus...">
         <button class="search-button">Search</button>
     </div>
-    <button class="view-all-button">Ver todos los restaurantes disponibles del sitio</button>
+    <button class="view-all-button">See All Restaurants</button>
 </div>
 
 <div class="cities-grid">
