fixed branding effects

--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
     }
 
         .branding-container {
-            flex-direction: column;
+            flex-direction: row;
         }
 
         .branding-image {
-            display: none;
+          
         }
 
         .center-logo {
