fixed nav bar mobile button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <a href="#">Catering</a>
   <a href="#">Donations</a>
   <a href="#">About Us</a>
-  <a href="#">My</a>
+  <a href="#">My Account</a>
 </div>
 
 
