piloto avance numero 1

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 }
 
 .find-restaurants-button {
-  display: block;
+ 
   width: 16%;
   border-radius: 6px;
   font-weight: bolder;
@@ -279,10 +279,14 @@
         <button class="search-button"><i class="fa-solid fa-map-pin"></i></button>
       </div>
       
-      <button class="find-restaurants-button">FIND RESTAURANTS</button>
+      <div >
+        <a href="/pages/restaurantsNearMe.html">
+        <button class="find-restaurants-button">FIND RESTAURANTS</button></a>
+      </div>
         
     </div>
   </div>
+
 
 
   <script>
