nav bar fixed after select location

--- a/pages/restaurantsNearMe.html
+++ b/pages/restaurantsNearMe.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/pages/restaurantsNearMe.css">
-  <script src="script.js" defer></script> 
+  <script src="/pages/script-nearMe.js" defer></script> 
 
 
+  
   <title>Delivery v3</title>
 
 </head>
@@ -51,7 +52,8 @@
 <style>
 
     .top-bar {
-        height: 90px;
+        position: relative;
+        height: 170px;
         position: relative;
         text-align: center;
         color: #fff;
@@ -59,10 +61,13 @@
     }
 
     .branding-container {
+        position: relative;
+        margin-top: 100px;
         display: flex;
         justify-content: center;
         align-items: center;
-        position: relative;
+       
+        
     }
 
     .branding-image {
@@ -192,7 +197,7 @@
         margin: 0 auto;
         max-width: 800px;
         height: 145px;
-        margin-bottom: 50px;
+        margin-bottom: 250px;
         border-radius: 5px;
         overflow: hidden;
     }
