grid restaurant done

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       </div>
       
       <div >
-        <a href="/pages/restaurantsNearMe.html">
+        <a href="/pages/main-page.html">
         <button class="find-restaurants-button">FIND RESTAURANTS</button></a>
       </div>
         
