added images on restaurant holders

--- a/pages/main-page.html
+++ b/pages/main-page.html
@@ -95,100 +95,100 @@
     <div class="restaurantGrid" id="restaurantGrid">
 <!-- Ejemplo de restaurante 1 -->
 <div class="restaurantCard" data-category="breakfast">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.png" alt="Restaurant Image">
-  <div class="restaurantName">BENG</div>
+  <img class="restaurantImage" src="/pages/restaurants/uplifted-bistro.png" alt="Restaurant Image">
+  <div class="restaurantName">Uplifted Bistro</div>
   <div class="restaurantHours"> 10:00AM - 08:00PM</div>
 </div>
 
 <!-- Ejemplo de restaurante 2 (Cerrado) -->
+<div class="restaurantCard closed" data-category="italian">
+  <img class="restaurantImage" src="/pages/restaurants/pizza-mia.png" alt="Restaurant Image">
+  <div class="restaurantName">Pizza Mia</div>
+  <div class="restaurantHours">Closed</div>
+</div>
+
+<!-- Ejemplo de restaurante 1 -->
+<div class="restaurantCard" data-category="breakfast">
+  <img class="restaurantImage" src="/pages/restaurants/yannis-cafe-manteno.png" alt="Restaurant Image">
+  <div class="restaurantName">Yanni's Cafe</div>
+  <div class="restaurantHours">Closed</div>
+</div>
+
+<!-- Ejemplo de restaurante 2 (Cerrado) -->
 <div class="restaurantCard closed" data-category="lunch">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.PNG" alt="Restaurant Image">
-  <div class="restaurantName">Isidro's Tamales Y Taqueria</div>
-  <div class="restaurantHours">Closed Now</div>
+  <img class="restaurantImage" src="/pages/restaurants/jimmy-jos-bbq.png" alt="Restaurant Image">
+  <div class="restaurantName">Jimmy Jo's BBQ</div>
+  <div class="restaurantHours">Closed</div>
+</div>
+
+<!-- Ejemplo de restaurante 1 -->
+<div class="restaurantCard" data-category="breakfast">
+  <img class="restaurantImage" src="/pages/restaurants/beng.png" alt="Restaurant Image">
+  <div class="restaurantName">BENG</div>
+  <div class="restaurantHours">Closed</div>
+</div>
+
+<!-- Ejemplo de restaurante 2 (Cerrado) -->
+<div class="restaurantCard closed" data-category="breakfast">
+  <img class="restaurantImage" src="/pages/restaurants/uplifted-bistro-manteno.png" alt="Restaurant Image">
+  <div class="restaurantName">Uplifted Bistro Manteno</div>
+  <div class="restaurantHours">Closed</div>
 </div>
 
 <!-- Ejemplo de restaurante 1 -->
 <div class="restaurantCard" data-category="breakfast">
   <img class="restaurantImage" src="/pages/restaurants/hokkaido.png" alt="Restaurant Image">
-  <div class="restaurantName">BENG</div>
-  <div class="restaurantHours"> 10:00AM - 08:00PM</div>
+  <div class="restaurantName">Hokkaido Ramen House in Bourbonnais</div>
+  <div class="restaurantHours">Closed</div>
 </div>
 
 <!-- Ejemplo de restaurante 2 (Cerrado) -->
-<div class="restaurantCard closed" data-category="lunch">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.PNG" alt="Restaurant Image">
-  <div class="restaurantName">Isidro's Tamales Y Taqueria</div>
-  <div class="restaurantHours">Closed Now</div>
-</div>
-
-<!-- Ejemplo de restaurante 1 -->
-<div class="restaurantCard" data-category="breakfast">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.png" alt="Restaurant Image">
-  <div class="restaurantName">BENG</div>
-  <div class="restaurantHours"> 10:00AM - 08:00PM</div>
-</div>
-
-<!-- Ejemplo de restaurante 2 (Cerrado) -->
-<div class="restaurantCard closed" data-category="lunch">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.PNG" alt="Restaurant Image">
-  <div class="restaurantName">Isidro's Tamales Y Taqueria</div>
-  <div class="restaurantHours">Closed Now</div>
-</div>
-
-<!-- Ejemplo de restaurante 1 -->
-<div class="restaurantCard" data-category="breakfast">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.png" alt="Restaurant Image">
-  <div class="restaurantName">BENG</div>
-  <div class="restaurantHours"> 10:00AM - 08:00PM</div>
-</div>
-
-<!-- Ejemplo de restaurante 2 (Cerrado) -->
-<div class="restaurantCard closed" data-category="lunch">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.PNG" alt="Restaurant Image">
-  <div class="restaurantName">Isidro's Tamales Y Taqueria</div>
-  <div class="restaurantHours">Closed Now</div>
+<div class="restaurantCard closed" data-category="asian">
+  <img class="restaurantImage" src="/pages/restaurants/main-dynasty.png" alt="Restaurant Image">
+  <div class="restaurantName">Main Dynasty</div>
+  <div class="restaurantHours">Closed</div>
 </div>
 
 
 <!-- Ejemplo de restaurante 1 -->
-<div class="restaurantCard" data-category="breakfast">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.png" alt="Restaurant Image">
-  <div class="restaurantName">BENG</div>
-  <div class="restaurantHours"> 10:00AM - 08:00PM</div>
+<div class="restaurantCard" data-category="healthy">
+  <img class="restaurantImage" src="/pages/restaurants/essential-smoothies.png" alt="Restaurant Image">
+  <div class="restaurantName">Essential Smoothies</div>
+  <div class="restaurantHours">Closed</div>
 </div>
 
 <!-- Ejemplo de restaurante 2 (Cerrado) -->
-<div class="restaurantCard closed" data-category="lunch">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.PNG" alt="Restaurant Image">
-  <div class="restaurantName">Isidro's Tamales Y Taqueria</div>
-  <div class="restaurantHours">Closed Now</div>
+<div class="restaurantCard closed" data-category="mexican">
+  <img class="restaurantImage" src="/pages/restaurants/la-siesta.png" alt="Restaurant Image">
+  <div class="restaurantName">La Siesta</div>
+  <div class="restaurantHours">Closed</div>
 </div>
 
 
 <!-- Ejemplo de restaurante 1 -->
-<div class="restaurantCard" data-category="breakfast">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.png" alt="Restaurant Image">
-  <div class="restaurantName">BENG</div>
-  <div class="restaurantHours"> 10:00AM - 08:00PM</div>
+<div class="restaurantCard" data-category="american">
+  <img class="restaurantImage" src="/pages/restaurants/poor-boy.png" alt="Restaurant Image">
+  <div class="restaurantName">Poor Boy</div>
+  <div class="restaurantHours">Closed</div>
 </div>
 
 <!-- Ejemplo de restaurante 2 (Cerrado) -->
-<div class="restaurantCard closed" data-category="lunch">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.PNG" alt="Restaurant Image">
-  <div class="restaurantName">Isidro's Tamales Y Taqueria</div>
-  <div class="restaurantHours">Closed Now</div>
+<div class="restaurantCard closed" data-category="mexican">
+  <img class="restaurantImage" src="/pages/restaurants/dos-amigos.png" alt="Restaurant Image">
+  <div class="restaurantName">Dos Amigos</div>
+  <div class="restaurantHours">Closed</div>
 </div>
 
 <!-- Ejemplo de restaurante 1 -->
-<div class="restaurantCard" data-category="breakfast">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.png" alt="Restaurant Image">
-  <div class="restaurantName">BENG</div>
-  <div class="restaurantHours"> 10:00AM - 08:00PM</div>
+<div class="restaurantCard" data-category="italian">
+  <img class="restaurantImage" src="/pages/restaurants/tuccis.png" alt="Restaurant Image">
+  <div class="restaurantName">B</div>
+  <div class="restaurantHours">Closed</div>
 </div>
 
 <!-- Ejemplo de restaurante 2 (Cerrado) -->
-<div class="restaurantCard closed" data-category="lunch">
-  <img class="restaurantImage" src="/pages/restaurants/hokkaido.PNG" alt="Restaurant Image">
+<div class="restaurantCard closed" data-category="american">
+  <img class="restaurantImage" src="/pages/restaurants/windy-hill-grill.png" alt="Restaurant Image">
   <div class="restaurantName">Isidro's Tamales Y Taqueria</div>
   <div class="restaurantHours">Closed Now</div>
 </div>
