--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     }
 
     .addressSection {
-        background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/assets/background-delivery-address.jpg");
+        background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("");
         padding-top: 90px;
         background-color: #ccb145;
         height: 575px;
